fixed z-index

--- a/Geothermal/style.css
+++ b/Geothermal/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 .leadlet-control {
-  z-index: 1000;
+  z-index: 1001;
 }
 
 .legend {
